test/errors/str3.qk

#OUTPUT
#Syntax Error: You can only assign a string to a string.
# -> [15] str s2 = i
#
#END

#RET 0

extern func puts(s:str)

func main -> int
    int i = 20
    str s1 = "Hello!"
    str s2 = i
    
    puts(s1)
    puts(s2)
    
    return 0
end
